--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.0.2",
-    "@eslint/js": "^9.1.1",
-    "eslint": "^7.32.0 || ^8.2.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.2",
     "globals": "^15.0.0",
     "nodemon": "^3.1.0",
+    "sequelize-cli": "^6.6.2",
     "sucrase": "^3.35.0"
   }
 }
